tweak/hack integration test settings